@@ -1,0 +1,8 @@
+Feature: Lots of undefined
+
+  Scenario: Implement me
+    Given it snows in Sahara
+    Given it's 40 degrees in Norway
+    And it's 40 degrees in Norway
+    When I stop procrastinating
+    And there is world peace
